02 Oct 2019:  Added support for Open Ended Vectors with more than 2 points to GCODE generator
31 Jul 2019:  Updated Settings -> Machine Profile dropdown Menu
23 Jul 2019:  Added Pen Plotter: Lines Fill operation type
18 Jul 2019:  Fixed bug with Ramp Plunges
11 Jul 2019:  Fixed Tab Height bug, added improvements to Pen Plotter operations, added Angle setting to Laser Raster
01 Jul 2019:  Moved Toolpath Calculation to WebWorkers
24 Jun 2019:  Moved Gcode Preview to WebWorker
14 Jun 2019:  Added Beta of Servo based Pen Plotter CAM
29 Apr 2019:  Added Delete Selection button #49, Added Workspace and Gcode naming #51, Added .OBC file support via CONTROL
25 Apr 2019:  Added Splines, Insert to DXF Parser
17 Apr 2019:  Fixed cut direction for Outside Cuts
25 Feb 2019:  Added OpenBuilds BlackBox 4X Profile
19 Feb 2019:  Fixed CNC Hello World file
04 Feb 2019:  Fixed Keyboard Binding Bug
28 Jan 2019:  Updated Licence AGPL3
21 Jan 2019:  Added comment with endmill diameter to GCODE Output
11 Jan 2019:  Added a "Disable Tool-Width Preview checkbox" to the Settings modal
10 Jan 2019:  Added more artwork to the Parts Library
09 Jan 2019:  Added more artwork to the Parts Library
09 Jan 2019:  Improved Toolpath Modal cosmetics and minor bugs
09 Jan 2019:  Added handling for Open vectors
09 Jan 2019:  Improved HelloWorld backend (Disable Caching, Updated JSON)
08 Jan 2019:  Fixed Load Workspace Input bug
08 Jan 2019:  Added HelloWorld Submenu and Laser specific Hello World
07 Jan 2019:  Updated profiles for Acro machines
04 Jan 2019:  Added View Checkboxes (bottom right corner of 3D viewer)
02 Jan 2019:  Enhanced toolpath error messages to be more descriptive
02 Jan 2019:  Fixed Firefox step=any bug for input=number
28 Dec 2018:  Fixed keybinding bug on Internal CAD modals
27 Dec 2018:  Fixed glitchy window bug
27 Dec 2018:  Added Changelog
27 Dec 2018:  Moved Merge Geometry form entry higher up on form
27 Dec 2018:  Fixed delete/backspace behavior on cam modal